--- a/index.html
+++ b/index.html
@@ -5,10 +5,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-oggetti-studenti</title>
+    <!doctype html>
+    <html lang="en">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
+    <header>
+        <section>
+            <div class="container py-5">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Cognome</th>
+                            <th scope="col">Età</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-body">
+
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <form id="form-add-members" action="">
+                            <div class="mb-2">
+                                <label for="exampleInputName" class="form-label">Nome</label>
+                                <input type="name" class="form-control" id="nome" aria-describedby="nameHelp">
+                                <div id="nome" class="form-text">Inserisci un nome
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <label for="exampleInputSurname" class="form-label">Cognome</label>
+                                <input type="surname" class="form-control" id="cognome" aria-describedby="surnameHelp">
+                                <div id="cognome" class="form-text">Inserisci un cognome
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <label for="exampleInputAge" class="form-label">Età</label>
+                                <input type="age" class="form-control" id="età" aria-describedby="ageHelp">
+                                <div id="età" class="form-text">Inserisci un età
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Invio</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
     <script src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
