--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header>
         <section>
             <div class="container py-5">
+                <h2 class="text-center mb-3">Lista studenti</h2>
                 <table class="table">
                     <thead>
                         <tr>
@@ -36,6 +37,7 @@
     <main>
         <section>
             <div class="container">
+                <h2 class="mb-4">Aggiungi studente</h2>
                 <div class="row">
                     <div class="col-lg-6">
                         <form id="form-add-members" action="">
