--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <div id="età" class="form-text">Inserisci un età
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Invio</button>
+                            <button class="btn btn-primary">Invio</button>
                         </form>
                     </div>
                 </div>
